--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -1,5 +1,5 @@
 .hero {
-    height: 500px;
+    height: 200px;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -23,12 +23,12 @@
   }
   
   .hero h1, .hero h2 {
-    color: white;
+    color: rgb(33, 46, 233);
   }
   
   .hero h1 {
     font-size: 60px;
-    padding-top: 140px;
+    padding-top: 60px;
     margin-top: 0;
   }
   
